--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 </div>
     
-<div class="container Topic Three">
+<div class="container Topic three">
     <div class="row">
         <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-3">
            <div class="topic1 d-flex align-items-center flex-column bd-highlight justify content center">
